# multiscat

./: .gitignore  Cargo.toml  README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: test.yml
examples/: improved_guess.py  interpolate.py  lobatto.py  potential.py  scattering.py
examples/mos2/: model.py  potential.py  scattering.py
examples/wolken/: README.md  _params.py  potential.py  scattering.py  train.py
lib/multiscat_fortran/: pyproject.toml  setup.py
lib/multiscat_fortran/fortran/: diagsub.f  diagsub.f90  multiscat.f90  multiscat.inc  multiscat_gmres.f90  multiscat_python_bindings.f90  multiscat_python_bindings.pyf  scatsub.f  scatsub.f90
lib/multiscat_fortran/src/multiscat_fortran/: __init__.py  __init__.pyi
lib/pytorch_gmres/: pyproject.toml
lib/pytorch_gmres/src/pytorch_gmres/: __init__.py  _gmres.py
lib/pytorch_gmres/tests/: test_gmres_vs_scipy.py
multiscat/: __init__.py  basis.py  config.py  fixed_potential.py  interpolate.py  lobatto.py  multiscat.py  polynomial.py  scattering_condition.py
multiscat/multiscat/: __init__.py  _fortran.py  _gmres.py  _multiscat.py  _scipy.py  _scipy_von_neumann.py  _util.py
scripts/: main.py  multiscat.py
src/: diagsub.rs  lib.rs  potsub.rs  scatsub.rs
tests/: lobatto_test.py  test_fixed_example.py  test_manual_example.py
tests/data/: expected_intensities.txt  expected_potential.npy
