[project]
name = "multiscat"
version = "0.1.0"
description = ""
authors = [{ name = "Matthew Ord", email = "matthew.ord1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "slate_core @ git+https://github.com/Matt-Ord/slate.git@c2e6210",
    "slate_quantum[sse_solver_py] @ git+https://github.com/Matt-Ord/slate_quantum.git@5229c07",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright ==1.1.400",
    "pytest>=8.2.2,<9.0.0",
    "matplotlib>=3.9.1,<4.0.0",
]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D103",
    "D104",
    "D107",
    "D203",
    "D212",
    "D100",
    "D417",
    "TD003",
    "TD002",
]
unfixable = ["ERA001", "T201"]

[tool.ruff.lint.extend-per-file-ignores]
"examples/**/*" = ["T201", "INP001"]
"scripts/**/*" = ["T201", "INP001"]
"tests/**/*" = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["tests", "multiscat", "examples"]
reportImplicitOverride = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
