[project]
name = "pytorch_gmres"
version = "0.0.1"
description = ""
authors = [{ name = "Matthew Ord", email = "matthew.ord1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["array-api-compat>=1.14.0", "types-array-api>=1.3.0"]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyright ==1.1.400",
  "pytest>=8.2.2,<9.0.0",
  "numpy>=2.4.3",
  "scipy>=1.17.1",
]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D103",
  "D104",
  "D107",
  "D203",
  "D212",
  "D100",
  "D417",
  "TD003",
  "TD002",
]
unfixable = ["ERA001", "T201"]

[tool.ruff.lint.extend-per-file-ignores]
"examples/**/*" = ["T201", "INP001"]
"scripts/**/*" = ["T201", "INP001"]
"tests/**/*" = ["INP001"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["tests", "pytorch_gmres", "examples"]
reportImplicitOverride = true


[tool.setuptools.packages.find]
where = ["src"]
include = ["pytorch_gmres*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
